update libs and add database test

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,13 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.activities.ReminderActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".ui.noteDetail.NoteDetailActivity"
-            android:screenOrientation="portrait"
-            android:parentActivityName=".ui.notelist.MainActivity"/>
+        <activity
+            android:name=".ui.activities.ReminderActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.noteDetail.NoteDetailActivity"
+            android:parentActivityName=".ui.notelist.MainActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.notelist.MainActivity"
             android:label="@string/app_name"
@@ -24,7 +26,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <receiver android:name=".AlarmReceiver"/>
+
+        <receiver android:name=".AlarmReceiver" />
     </application>
 
 </manifest>
